--- a/httpd-vhosts.conf
+++ b/httpd-vhosts.conf
@@ -90,3 +90,27 @@ RedirectMatch /ilw/pp/([^\/]+)/(.*)   http://localhost:9877/$2
     ProxyPass / http://127.0.0.1:8888/
     ProxyPassReverse / http://127.0.0.1:8888/
 </VirtualHost>
+
+##############################
+#qianshan.com
+##############################
+<VirtualHost *:80>
+ServerAdmin admin@admin.com
+DocumentRoot "d:/www/"
+ServerName qianshan.com
+<Directory "d:/www/">
+Options Indexes FollowSymLinks
+AllowOverride All
+Order allow,deny
+Allow from all
+</Directory>
+ProxyRequests Off
+<Proxy *>
+Order deny,allow
+Allow from all
+</Proxy>
+ProxyPass / http://127.0.0.1:3000/
+ProxyPassReverse / http://127.0.0.1:3000/
+ProxyPass /js http://127.0.0.1:3000/js
+ProxyPassReverse /js http://127.0.0.1:3000/js
+</VirtualHost>
