--- a/httpd-vhosts.conf
+++ b/httpd-vhosts.conf
@@ -93,11 +93,15 @@ RedirectMatch /ilw/pp/([^\/]+)/(.*)   http://localhost:9877/$2
 ##############################
 #qianshan.com
 ##############################
+
+##############################
+#showfan.cn
+##############################
 <VirtualHost *:80>
 ServerAdmin admin@admin.com
-DocumentRoot "D:/www/"
-ServerName qianshan.com
-<Directory "D:/www/">
+DocumentRoot "/user/xiaoshan"
+ServerName showfan.cn
+<Directory "/user/xiaoshan">
 Options Indexes FollowSymLinks
 AllowOverride All
 Order allow,deny
