--- a/httpd-vhosts.conf
+++ b/httpd-vhosts.conf
@@ -90,3 +90,69 @@ RedirectMatch /ilw/pp/([^\/]+)/(.*)   http://localhost:9877/$2
     ProxyPass / http://127.0.0.1:8888/
     ProxyPassReverse / http://127.0.0.1:8888/
 </VirtualHost>
+
+##############################
+#qianshan.com
+##############################
+
+##############################
+#wengqianshan
+##############################
+
+##############################
+#m.com
+##############################
+
+##############################
+#baidu.com
+##############################
+
+##############################
+#taobao.com
+##############################
+
+##############################
+#qianshan.com
+##############################
+
+##############################
+#m.com
+##############################
+
+##############################
+#showfan.cn
+##############################
+
+##############################
+#qianshan.com
+##############################
+
+##############################
+#m.com
+##############################
+
+##############################
+#showfan.cn
+##############################
+
+##############################
+#qianshan.com
+##############################
+<VirtualHost *:80>
+    ServerAdmin admin@admin.com
+    DocumentRoot "/Users/xiaoshan/code"
+    ServerName qianshan.com
+    <Directory "/Users/xiaoshan/code">
+        Options Indexes FollowSymLinks
+        AllowOverride All
+        Order allow,deny
+        Allow from all
+    </Directory>
+ProxyRequests Off
+<Proxy *>
+    Order deny,allow
+    Allow from all
+</Proxy>
+ProxyPass / http://127.0.0.1:3000/
+ProxyPassReverse / http://127.0.0.1:3000/
+</VirtualHost>
