--- a/nw/package.json
+++ b/nw/package.json
@@ -2,7 +2,7 @@
   "name": "application-name",
   "main": "index.html",
   "window": {
-    //"toolbar": false,
+    "toolbar": false,
     //"frame": false,
     "width": 1024,
     "height": 600,
