--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "JQDeferred": "^2.1.0",
     "body-parser": "~1.0.0",
     "cookie-parser": "~1.0.1",
     "debug": "~0.7.4",
     "express": "~4.0.0",
+    "inpath": "^1.0.2",
     "jade": "~1.3.0",
     "morgan": "~1.0.0",
     "native-dns": "^0.6.1",
