--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jade": "~1.3.0",
     "morgan": "~1.0.0",
     "native-dns": "^0.6.1",
+    "request": "^2.67.0",
     "static-favicon": "~1.0.0",
     "yargs": "^3.27.0"
   }
