--- a/package.json
+++ b/package.json
@@ -16,8 +16,31 @@
     "jade": "~1.3.0",
     "morgan": "~1.0.0",
     "native-dns": "^0.6.1",
+    "react-toolbox": "^0.13.3",
     "request": "^2.67.0",
     "static-favicon": "~1.0.0",
     "yargs": "^3.27.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^6.1.2",
+    "babel": "^6.3.13",
+    "babel-core": "^6.3.13",
+    "babel-loader": "^6.2.0",
+    "babel-plugin-react-transform": "^1.1.1",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "css-loader": "^0.23.0",
+    "extract-text-webpack-plugin": "^0.9.1",
+    "node-sass": "^3.4.2",
+    "postcss-loader": "^0.8.0",
+    "react": "^0.14.3",
+    "react-dom": "^0.14.3",
+    "react-transform-hmr": "^1.0.1",
+    "sass-loader": "^3.1.2",
+    "style-loader": "^0.13.0",
+    "toolbox-loader": "0.0.3",
+    "webpack": "^1.12.9",
+    "webpack-dev-middleware": "^1.4.0",
+    "webpack-hot-middleware": "^2.6.0"
   }
 }
