--- a/package.json
+++ b/package.json
@@ -29,12 +29,16 @@
     "babel-plugin-react-transform": "^1.1.1",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
+    "babel-preset-stage-0": "^6.3.13",
+    "classnames": "^2.2.1",
     "css-loader": "^0.23.0",
     "extract-text-webpack-plugin": "^0.9.1",
     "node-sass": "^3.4.2",
     "postcss-loader": "^0.8.0",
     "react": "^0.14.3",
+    "react-addons-css-transition-group": "^0.14.3",
     "react-dom": "^0.14.3",
+    "react-transform-catch-errors": "^1.0.0",
     "react-transform-hmr": "^1.0.1",
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
